<resources>
    <string name="app_name">Flatypus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="notification_count">0</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notifications_text">Notifications</string>
    <string name="apartments_text">Apartments</string>
    <string name="apartment_code_text">Apartment code:</string>
    <string name="leave_apartment_text">LEAVE APARTMENT</string>
    <string name="add_task_text">ADD TASK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_do_text">To-Do</string>
    <string name="title_shoppinglist">Shopping List</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_chat">Chat</string>
    <string name="heart_count">0</string>
    <string name="pick_these_up_if_you_can">PICK THESE UP IF YOU CAN!</string>
    <string name="settle_up">SETTLE UP!</string>
    <string name="to_do_list">TO DO LIST</string>
    <string name="settle">Settle</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="enter_apartment_name">Enter apartment name</string>
    <string name="add_apartment">Add Apartment</string>
    <string name="create_apartment">Create Apartment</string>
    <string name="enter_apartment_code">Enter apartment code</string>
    <string name="task_name">Task Name</string>
    <string name="add_task">ADD TASK</string>
    <string name="task_name_tasks">Task Name</string>
    <string name="username">Username</string>
    <string name="log_out">LOG OUT</string>
    <string name="activity">ACTIVITY</string>
    <string name="new_notifications">New notifications</string>
    <string name="old_notifications">Old notifications</string>
</resources>