<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shoppinglist"
        android:icon="@drawable/baseline_shopping_bag_24"
        android:title="@string/title_shoppinglist" />

    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/baseline_attach_money_24"
        android:title="@string/title_expenses" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/baseline_ballot_24"
        android:title="@string/to_do_text" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/baseline_3p_24"
        android:title="@string/title_chat" />


</menu>