<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_shoppinglist"
        android:name="si.uni_lj.fe.tnuv.flatypus.ui.shoppinglist.ShoppingListFragment"
        android:label="@string/title_shoppinglist"
        tools:layout="@layout/fragment_shopping_list" />

    <fragment
        android:id="@+id/navigation_expenses"
        android:name="si.uni_lj.fe.tnuv.flatypus.ui.expenses.ExpensesFragment"
        android:label="@string/title_expenses"
        tools:layout="@layout/fragment_expenses" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="si.uni_lj.fe.tnuv.flatypus.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_todo"
        android:name="si.uni_lj.fe.tnuv.flatypus.ui.to_do.ToDoFragment"
        android:label="To-Do"
        tools:layout="@layout/fragment_to_do">
        <action
            android:id="@+id/action_nav_todo_to_nav_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chat"
        android:name="si.uni_lj.fe.tnuv.flatypus.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="si.uni_lj.fe.tnuv.flatypus.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_nav_settings_to_nav_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="si.uni_lj.fe.tnuv.flatypus.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>